--- a/templates/model_scenario_1.html
+++ b/templates/model_scenario_1.html
@@ -95,6 +95,10 @@
         white-space: nowrap;
         -webkit-overflow-scrolling: touch;
       }
+      select {
+            width: 183px;
+
+      }
     </style>
 
     
