--- a/templates/service.html
+++ b/templates/service.html
@@ -97,6 +97,10 @@
         white-space: nowrap;
         -webkit-overflow-scrolling: touch;
       }
+      select {
+            width: 183px;
+
+      }
     </style>
 
     
@@ -123,24 +127,32 @@
 
         <form action="/pipeline/service" method="post" enctype="multipart/form-data">
 
-          <label class="col-md-8 fs-4">Deploy Model from Registry.</label>
-          <br><br>
-          <select name="modelFile" method="GET"  style="font-size:20px;">
-            {% for model in model_registry %}
-            <option value= "{{model}}"  SELECTED>{{model}}</option>"
-            {% endfor %}
-          </select>
+          <div class="col-md-12">
+            <div class="h-100 p-5 bg-light border rounded-3">
+              <label class="col-md-8 fs-4">Deploy Model from Registry.</label>
 
-          <br><br>
+              <select name="modelFile" method="GET"  style="font-size:20px;">
+                {% for model in model_registry %}
+                <option value= "{{model}}"  SELECTED>{{model}}</option>"
+                {% endfor %}
+              </select>
 
-          <label class="col-md-8 fs-4">Select Data directory from Server.</label>
-          <select name="dataDirectory" method="GET"  style="font-size:20px;" >  <!-- select 也可以配 action -->
-            {% for dataDir in upload_data %}
-            <option value= "{{dataDir}}" SELECTED>{{dataDir}}</option>"
-            {% endfor %}
-          </select>
+            </div>
+          </div>
 
-          <br><br>
+          <br>
+          <div class="col-md-12">
+            <div class="h-100 p-5 bg-light border rounded-3">
+              <label class="col-md-8 fs-4">Select Data directory from Server.</label>
+              <select name="dataDirectory" method="GET"  style="font-size:20px;" >  <!-- select 也可以配 action -->
+                {% for dataDir in upload_data %}
+                <option value= "{{dataDir}}" SELECTED>{{dataDir}}</option>"
+                {% endfor %}
+              </select>
+            </div>
+          </div>
+
+          <br>
 
           <label class="col-md-8 fs-5"></label>
           <label for="inference" class="btn btn-primary btn-lg">Inference</label>
@@ -148,96 +160,97 @@
         
           <br><br>
 
-          <br><br>
-          <label class="col-md-8 fs-3">Training configuration</label>
-          <br><br>
-          <text><b>Data directory : <font color="blue">{{dataDirectory}}</font></b></text>
-          <br>
-          <text><b>Model  : <font color="blue">{{modelFile}}</font></b></text>
-          <br>
-          <text><b>Initializing number : <font color="blue">{{initializingNumber}}</font></b></text>
-          <br>
-          <text><b>Loss Function : <font color="blue">{{lossFunction}}</font></b></text>
-          <br>
-          <text><b>Learning goal : <font color="blue">{{learningGoal}}</font></b></text>
-          <br>
-          <text><b>Learning rate : <font color="blue">{{learningRate}}</font></b></text>
-          <br>
-          <text><b>Learning rate Lower bound : <font color="blue">{{learningRateLowerBound}}</font></b></text>
-          <br>
-          <text><b>Optimizer : <font color="blue">{{optimizer}}</font></b></text>
-          <br>
-          <text><b>Tuning times : <font color="blue">{{tuningTimes}}</font></b></text>
-          <br>
-          <text><b>Regularizing strength : <font color="blue">{{regularizingStrength}}</font></b></text>
-          <!-- <br>
-          <text><b>model_experiments_record : <font color="blue">{{model_experiments_record}}</font></b></text> -->
-          <br><br>
-          <label class="col-md-8 fs-3">Training progressbar</label>
-          <br><br>
-          <label class="col-md-8 fs-3">Model Performance</label>
-          <br><br>
-          <text><b>Training accuracy : <font color="blue">{{trainingAccuracy}}</font></b></text>
-          <br>
-          <text><b>Validating accuracy : <font color="blue">{{validatingAccuracy}}</font></b></text>
-          <br>
-          <text><b>Testing accuracy : <font color="blue">{{testingAccuracy}}</font></b></text>
-          <br>
-          <div class="p-5 mb-1 bg-light rounded-3">
-
-            <!-- <div class="gallery">
-              <a target="_blank" href="{{ url_for('static', path='/img/acc.png') }}">
-                <img src="{{ url_for('static', path='/img/acc.png') }}"  alt="Training Accuracy" width="600" height="400">
-              </a>
-              <div class="desc">Training Accuracy</div>
-            </div> -->
-
-
-            <div class="gallery">
-              <a target="_blank" href="{{url_path_for_Accuracy}}">
-                <img src= "{{url_path_for_Accuracy}}"  alt="Training Accuracy" width="600" height="400">
-              </a>
-              <div class="desc">Training Accuracy</div>
+          <div class="col-md-12">
+            <div class="h-100 p-5 bg-light border rounded-3">
+              <label class="col-md-8 fs-3">Training configuration</label>
+              <br><br>
+              <text><b>Data directory : <font color="blue">{{dataDirectory}}</font></b></text>
+              <br>
+              <text><b>Model  : <font color="blue">{{modelFile}}</font></b></text>
+              <br>
+              <text><b>Initializing number : <font color="blue">{{initializingNumber}}</font></b></text>
+              <br>
+              <text><b>Loss Function : <font color="blue">{{lossFunction}}</font></b></text>
+              <br>
+              <text><b>Learning goal : <font color="blue">{{learningGoal}}</font></b></text>
+              <br>
+              <text><b>Learning rate : <font color="blue">{{learningRate}}</font></b></text>
+              <br>
+              <text><b>Learning rate Lower bound : <font color="blue">{{learningRateLowerBound}}</font></b></text>
+              <br>
+              <text><b>Optimizer : <font color="blue">{{optimizer}}</font></b></text>
+              <br>
+              <text><b>Tuning times : <font color="blue">{{tuningTimes}}</font></b></text>
+              <br>
+              <text><b>Regularizing strength : <font color="blue">{{regularizingStrength}}</font></b></text>
             </div>
+          </div>
+
+          <br><br>
+          <div class="col-md-12">
+            <div class="h-100 p-5 bg-light border rounded-3">
+              <label class="col-md-8 fs-3">Model Performance</label>
+              <br><br>
+              <text><b>Training accuracy : <font color="blue">{{trainingAccuracy}}</font></b></text>
+              <br>
+              <text><b>Validating accuracy : <font color="blue">{{validatingAccuracy}}</font></b></text>
+              <br>
+              <text><b>Testing accuracy : <font color="blue">{{testingAccuracy}}</font></b></text>
+              <br>
+              <div class="p-5 mb-1 bg-light rounded-3">
+
+                <div class="gallery">
+                  <a target="_blank" href="{{url_path_for_Accuracy}}">
+                    <img src= "{{url_path_for_Accuracy}}"  alt="Training Accuracy" width="600" height="400">
+                  </a>
+                  <div class="desc">Training Accuracy</div>
+                </div>
+                
+                <div class="gallery">
+                  <a target="_blank" href="{{url_path_for_Loss}}">
+                    <img src= "{{url_path_for_Loss}}"  alt="Training Loss" width="600" height="400">
+                  </a>
+                  <div class="desc">Training Loss</div>
+                </div>
+                <div class="gallery">
+                  <a target="_blank" href="{{url_path_for_Nodes}}">
+                    <img src="{{url_path_for_Nodes}}"  alt="Model Nodes" width="600" height="400">
+                  </a>
+                  <div class="desc">Model Nodes</div>
+                </div>
+                
+                <div class="gallery">
+                  <a target="_blank" href="{{url_path_for_Pruned_nodes}}">
+                    <img src="{{url_path_for_Pruned_nodes}}"  alt="Pruned Nodes" width="600" height="400">
+                  </a>
+                  <div class="desc">Pruned Nodes</div>
+                </div>
+
+                <div class="gallery">
+                  <a target="_blank" href="{{url_path_for_Routes}}">
+                    <img src="{{url_path_for_Routes}}"  alt="Model Routes" width="600" height="400">
+                  </a>
+                  <div class="desc">Model Routes</div>
+                </div>
+
+                <br><br><br><br><br>
             
-            <div class="gallery">
-              <a target="_blank" href="{{url_path_for_Loss}}">
-                <img src= "{{url_path_for_Loss}}"  alt="Training Loss" width="600" height="400">
-              </a>
-              <div class="desc">Training Loss</div>
             </div>
-            <div class="gallery">
-              <a target="_blank" href="{{url_path_for_Nodes}}">
-                <img src="{{url_path_for_Nodes}}"  alt="Model Nodes" width="600" height="400">
-              </a>
-              <div class="desc">Model Nodes</div>
-            </div>
-            
-            <div class="gallery">
-              <a target="_blank" href="{{url_path_for_Pruned_nodes}}">
-                <img src="{{url_path_for_Pruned_nodes}}"  alt="Pruned Nodes" width="600" height="400">
-              </a>
-              <div class="desc">Pruned Nodes</div>
-            </div>
-
-            <div class="gallery">
-              <a target="_blank" href="{{url_path_for_Routes}}">
-                <img src="{{url_path_for_Routes}}"  alt="Model Routes" width="600" height="400">
-              </a>
-              <div class="desc">Model Routes</div>
-            </div>
-            
           </div>
           
-          <br><br><br><br><br><br><br><br>
-          <label class="col-md-8 fs-4">Save configuration and Performace.</label>
-          <label for="save_configuration_performance" class="btn btn-primary btn-lg">Save</label>
-          <input type="submit" id="save_configuration_performance" class="btn btn-primary btn-lg" formaction="/save/service" hidden>
-          <br><br>
-          <text>After inferencing completed, this save mechanism will execute automatically.</text>
+          <br>
+          <div class="col-md-12">
+            <div class="h-100 p-5 bg-light border rounded-3">
+              <label class="col-md-8 fs-4">Save configuration and Performace.</label>
+              <label for="save_configuration_performance" class="btn btn-primary btn-lg">Save</label>
+              <input type="submit" id="save_configuration_performance" class="btn btn-primary btn-lg" formaction="/save/service" hidden>
+              <br><br>
+              <text>After inferencing completed, this save mechanism will execute automatically.</text>
+            </div>
+          </div>
+
         </form>
 
-        <br><br>
       </div>
     </div>
 
