整合至可用狀態: 1. riro, custoNet_s1, custoNet_s2 皆可訓練並部署 2. custoNet_s2 中的 2LayerNet 還沒寫

--- a/templates/model_scenario_1.html
+++ b/templates/model_scenario_1.html
@@ -180,7 +180,7 @@
                 <option value= "AdamW" >AdamW</option>
               </select>
               <label class="col-md-8 fs-5">Tuning times</label>
-              <input type="text" id="Hyperparameters" name="tuningTimes" >
+              <input type="text" id="Hyperparameters" name="matchingTimes" >
               <label class="col-md-8 fs-5">Regularizing strength</label>
               <input type="text" id="Hyperparameters" name="regularizingStrength"  >
               <br><br>
@@ -222,7 +222,7 @@
               <br>
               <text><b>Optimizer : <font color="blue">{{optimizer}}</font></b></text>
               <br>
-              <text><b>Tuning times : <font color="blue">{{tuningTimes}}</font></b></text>
+              <text><b>Tuning times : <font color="blue">{{matchingTimes}}</font></b></text>
               <br>
               <text><b>Regularizing strength : <font color="blue">{{regularizingStrength}}</font></b></text>
               <br>
